--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,9 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <!-- Main activity card dimensions -->
+
+    <!--the relation between the next two values should be 0.659 to match -->
+    <!--the most common cover aspect ratio-->
+    <dimen name="card_width">158dp</dimen>
+    <dimen name="card_thumbnail_height">240dp</dimen>
+
 </resources>
